--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,3 +13,15 @@
 .mainTitle {
     @apply text-3xl mb-16 lg:text-7xl font-bold text-center lg:mb-32
 }
+
+.projectTitle {
+    @apply text-2xl mb-10 lg:text-6xl font-bold text-left
+}
+
+.projectSubtitle {
+    @apply text-xl mb-6 lg:text-3xl font-bold text-left
+}
+
+.projectDescription {
+    @apply mb-20 text-left
+}
